output/diagnostico/H039/cambios_outcome.txt
  File "<string>", line 16
    print(f'  {cid}: {p[\
                       ^
SyntaxError: '[' was never closed
